--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroku-nodejs-starter",
+  "name": "simple-task-manager",
   "version": "0.2.6",
   "description": "A sample Node.js app using Express 4",
   "engines": {
@@ -7,22 +7,39 @@
   },
   "main": "index.js",
   "scripts": {
-    "serve": "node dist/index.js",
-    "postinstall": "npm run build",
-    "build": "./node_modules/.bin/babel src -d dist --copy-files",
-    "start": "babel-node src/index.js"
+    "start": "webpack-dev-server --config webpack.config.dev.js --progress"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "cors": "^2.8.4",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "ejs": "2.5.6",
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "force-case-sensitivity-webpack-plugin": "^0.2.1",
+    "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.4",
+    "lost": "^8.2.0",
+    "postcss-loader": "^2.0.6",
+    "radium": "^0.19.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.18.2",
+    "uuid": "^3.1.0",
+    "webpack": "^3.5.5"
   },
   "repository": {
     "type": "git",
@@ -39,7 +56,8 @@
     "eslint": "3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "webpack-dev-server": "^2.7.1"
   }
 }
