--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
+    "build": "NODE_ENV=production webpack --config ./webpack.config.prod.js --progress --colors",
+    "serve": "node server.js",
     "start": "webpack-dev-server --config webpack.config.dev.js --progress"
   },
   "dependencies": {
@@ -24,10 +26,11 @@
     "ejs": "2.5.6",
     "express": "4.15.2",
     "force-case-sensitivity-webpack-plugin": "^0.2.1",
+    "hard-source-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
-    "lost": "^8.2.0",
+    "node-object-hash": "^1.3.0",
     "postcss-loader": "^2.0.6",
     "radium": "^0.19.4",
     "react": "^15.6.1",
