--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --config ./webpack.config.prod.js --progress --colors",
+    "postinstall": "npm run build",
     "serve": "node server.js",
     "start": "webpack-dev-server --config webpack.config.dev.js --progress"
   },
