--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config ./webpack.config.prod.js --progress --colors",
+    "clean": "rimraf dist",
+    "build": "npm run clean && NODE_ENV=production webpack --config ./webpack.config.prod.js --progress --colors",
     "postinstall": "npm run build",
     "serve": "node server.js",
     "start": "webpack-dev-server --config webpack.config.dev.js --progress"
@@ -40,7 +41,9 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-offline": "^2.0.0",
     "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "webpack": "^3.5.5"
